Fixes Price Grabbed after Market Open